--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.location=F:/empleos/img-vacantes
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ic51m?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://b42d72f9235eb5:a643b076@us-cdbr-east-05.cleardb.net/heroku_9dfb24e6bbc2b21
+spring.datasource.username=b42d72f9235eb5
+spring.datasource.password=a643b076
 spring.jpa.generate-ddl=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
